src/csheets/ext/editMacro/compiler/MacroParser.java
// $ANTLR 3.5.1 ../csheets/ext/editMacro/compiler/Macro.g 2014-06-18 14:43:19

package csheets.ext.editMacro.compiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MacroParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABS", "AMP", "ATT", "CELL_REF", 
		"COLON", "COMMA", "DIGIT", "DIV", "EQ", "EXCL", "FUNCTION", "GT", "GTEQ", 
		"LBRA", "LETTER", "LPAR", "LT", "LTEQ", "MINUS", "MULTI", "NEQ", "NUMBER", 
		"PERCENT", "PLUS", "POWER", "QUOT", "RBRA", "RPAR", "SEMI", "STRING", 
		"TEMPVAR", "VARSIMBLE", "WS", "'\\n'", "'macro'"
	};
	public static final int EOF=-1;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int ABS=4;
	public static final int AMP=5;
	public static final int ATT=6;
	public static final int CELL_REF=7;
	public static final int COLON=8;
	public static final int COMMA=9;
	public static final int DIGIT=10;
	public static final int DIV=11;
	public static final int EQ=12;
	public static final int EXCL=13;
	public static final int FUNCTION=14;
	public static final int GT=15;
	public static final int GTEQ=16;
	public static final int LBRA=17;
	public static final int LETTER=18;
	public static final int LPAR=19;
	public static final int LT=20;
	public static final int LTEQ=21;
	public static final int MINUS=22;
	public static final int MULTI=23;
	public static final int NEQ=24;
	public static final int NUMBER=25;
	public static final int PERCENT=26;
	public static final int PLUS=27;
	public static final int POWER=28;
	public static final int QUOT=29;
	public static final int RBRA=30;
	public static final int RPAR=31;
	public static final int SEMI=32;
	public static final int STRING=33;
	public static final int TEMPVAR=34;
	public static final int VARSIMBLE=35;
	public static final int WS=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MacroParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MacroParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return MacroParser.tokenNames; }
	@Override public String getGrammarFileName() { return "../csheets/ext/editMacro/compiler/Macro.g"; }


		protected void mismatch(IntStream input, int ttype, BitSet follow)
			throws RecognitionException 
		{
	    	throw new MismatchedTokenException(ttype, input);
		}

		public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
			throws RecognitionException 
		{
			throw e; 
		}
		
		@Override
	  	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    	throw new MismatchedTokenException(ttype, input);
	 	}


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// ../csheets/ext/editMacro/compiler/Macro.g:45:1: expression : macro EOF !;
	public final MacroParser.expression_return expression() throws RecognitionException {
		MacroParser.expression_return retval = new MacroParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope macro1 =null;

		Object EOF2_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:46:2: ( macro EOF !)
			// ../csheets/ext/editMacro/compiler/Macro.g:46:4: macro EOF !
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_macro_in_expression80);
			macro1=macro();
			state._fsp--;

			adaptor.addChild(root_0, macro1.getTree());

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_expression82); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class macro_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "macro"
	// ../csheets/ext/editMacro/compiler/Macro.g:49:1: macro : 'macro' STRING LBRA ( line )+ RBRA ;
	public final MacroParser.macro_return macro() throws RecognitionException {
		MacroParser.macro_return retval = new MacroParser.macro_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal3=null;
		Token STRING4=null;
		Token LBRA5=null;
		Token RBRA7=null;
		ParserRuleReturnScope line6 =null;

		Object string_literal3_tree=null;
		Object STRING4_tree=null;
		Object LBRA5_tree=null;
		Object RBRA7_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:50:9: ( 'macro' STRING LBRA ( line )+ RBRA )
			// ../csheets/ext/editMacro/compiler/Macro.g:50:11: 'macro' STRING LBRA ( line )+ RBRA
			{
			root_0 = (Object)adaptor.nil();


			string_literal3=(Token)match(input,38,FOLLOW_38_in_macro108); 
			string_literal3_tree = (Object)adaptor.create(string_literal3);
			adaptor.addChild(root_0, string_literal3_tree);

			STRING4=(Token)match(input,STRING,FOLLOW_STRING_in_macro111); 
			STRING4_tree = (Object)adaptor.create(STRING4);
			adaptor.addChild(root_0, STRING4_tree);

			LBRA5=(Token)match(input,LBRA,FOLLOW_LBRA_in_macro114); 
			LBRA5_tree = (Object)adaptor.create(LBRA5);
			adaptor.addChild(root_0, LBRA5_tree);

			// ../csheets/ext/editMacro/compiler/Macro.g:50:34: ( line )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==EQ) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:50:35: line
					{
					pushFollow(FOLLOW_line_in_macro118);
					line6=line();
					state._fsp--;

					adaptor.addChild(root_0, line6.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			RBRA7=(Token)match(input,RBRA,FOLLOW_RBRA_in_macro123); 
			RBRA7_tree = (Object)adaptor.create(RBRA7);
			adaptor.addChild(root_0, RBRA7_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "macro"


	public static class line_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "line"
	// ../csheets/ext/editMacro/compiler/Macro.g:53:1: line : EQ ! sq '\\n' ;
	public final MacroParser.line_return line() throws RecognitionException {
		MacroParser.line_return retval = new MacroParser.line_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EQ8=null;
		Token char_literal10=null;
		ParserRuleReturnScope sq9 =null;

		Object EQ8_tree=null;
		Object char_literal10_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:54:9: ( EQ ! sq '\\n' )
			// ../csheets/ext/editMacro/compiler/Macro.g:54:10: EQ ! sq '\\n'
			{
			root_0 = (Object)adaptor.nil();


			EQ8=(Token)match(input,EQ,FOLLOW_EQ_in_line148); 
			pushFollow(FOLLOW_sq_in_line151);
			sq9=sq();
			state._fsp--;

			adaptor.addChild(root_0, sq9.getTree());

			char_literal10=(Token)match(input,37,FOLLOW_37_in_line153); 
			char_literal10_tree = (Object)adaptor.create(char_literal10);
			adaptor.addChild(root_0, char_literal10_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "line"


	public static class sq_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "sq"
	// ../csheets/ext/editMacro/compiler/Macro.g:57:1: sq : ( attribution | comparison | sequencia );
	public final MacroParser.sq_return sq() throws RecognitionException {
		MacroParser.sq_return retval = new MacroParser.sq_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope attribution11 =null;
		ParserRuleReturnScope comparison12 =null;
		ParserRuleReturnScope sequencia13 =null;


		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:58:9: ( attribution | comparison | sequencia )
			int alt2=3;
			switch ( input.LA(1) ) {
			case CELL_REF:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ATT) ) {
					alt2=1;
				}
				else if ( (LA2_1==AMP||LA2_1==COLON||(LA2_1 >= DIV && LA2_1 <= EQ)||(LA2_1 >= GT && LA2_1 <= GTEQ)||(LA2_1 >= LT && LA2_1 <= NEQ)||(LA2_1 >= PERCENT && LA2_1 <= POWER)||LA2_1==37) ) {
					alt2=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FUNCTION:
			case LPAR:
			case MINUS:
			case STRING:
				{
				alt2=2;
				}
				break;
			case TEMPVAR:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==ATT) ) {
					alt2=1;
				}
				else if ( (LA2_3==AMP||(LA2_3 >= DIV && LA2_3 <= EQ)||(LA2_3 >= GT && LA2_3 <= GTEQ)||(LA2_3 >= LT && LA2_3 <= NEQ)||(LA2_3 >= PERCENT && LA2_3 <= POWER)||LA2_3==37) ) {
					alt2=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case NUMBER:
				{
				switch ( input.LA(2) ) {
				case PERCENT:
					{
					int LA2_7 = input.LA(3);
					if ( (LA2_7==AMP||(LA2_7 >= DIV && LA2_7 <= EQ)||(LA2_7 >= GT && LA2_7 <= GTEQ)||(LA2_7 >= LT && LA2_7 <= NEQ)||(LA2_7 >= PLUS && LA2_7 <= POWER)||LA2_7==37) ) {
						alt2=2;
					}
					else if ( (LA2_7==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case POWER:
					{
					int LA2_8 = input.LA(3);
					if ( (LA2_8==CELL_REF||LA2_8==FUNCTION||LA2_8==LPAR||LA2_8==MINUS||LA2_8==NUMBER||(LA2_8 >= STRING && LA2_8 <= TEMPVAR)) ) {
						alt2=2;
					}
					else if ( (LA2_8==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case MULTI:
					{
					int LA2_9 = input.LA(3);
					if ( (LA2_9==CELL_REF||LA2_9==FUNCTION||LA2_9==LPAR||LA2_9==MINUS||LA2_9==NUMBER||(LA2_9 >= STRING && LA2_9 <= TEMPVAR)) ) {
						alt2=2;
					}
					else if ( (LA2_9==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 9, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case DIV:
					{
					int LA2_10 = input.LA(3);
					if ( (LA2_10==CELL_REF||LA2_10==FUNCTION||LA2_10==LPAR||LA2_10==MINUS||LA2_10==NUMBER||(LA2_10 >= STRING && LA2_10 <= TEMPVAR)) ) {
						alt2=2;
					}
					else if ( (LA2_10==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case PLUS:
					{
					int LA2_11 = input.LA(3);
					if ( (LA2_11==CELL_REF||LA2_11==FUNCTION||LA2_11==LPAR||LA2_11==MINUS||LA2_11==NUMBER||(LA2_11 >= STRING && LA2_11 <= TEMPVAR)) ) {
						alt2=2;
					}
					else if ( (LA2_11==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case MINUS:
					{
					int LA2_12 = input.LA(3);
					if ( (LA2_12==CELL_REF||LA2_12==FUNCTION||LA2_12==LPAR||LA2_12==MINUS||LA2_12==NUMBER||(LA2_12 >= STRING && LA2_12 <= TEMPVAR)) ) {
						alt2=2;
					}
					else if ( (LA2_12==LBRA) ) {
						alt2=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 12, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case AMP:
				case EQ:
				case GT:
				case GTEQ:
				case LT:
				case LTEQ:
				case NEQ:
				case 37:
					{
					alt2=2;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case LBRA:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:58:11: attribution
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_attribution_in_sq178);
					attribution11=attribution();
					state._fsp--;

					adaptor.addChild(root_0, attribution11.getTree());

					}
					break;
				case 2 :
					// ../csheets/ext/editMacro/compiler/Macro.g:58:25: comparison
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_comparison_in_sq182);
					comparison12=comparison();
					state._fsp--;

					adaptor.addChild(root_0, comparison12.getTree());

					}
					break;
				case 3 :
					// ../csheets/ext/editMacro/compiler/Macro.g:58:38: sequencia
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_sequencia_in_sq186);
					sequencia13=sequencia();
					state._fsp--;

					adaptor.addChild(root_0, sequencia13.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "sq"


	public static class sequencia_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "sequencia"
	// ../csheets/ext/editMacro/compiler/Macro.g:61:1: sequencia : ( ( NUMBER ) arithmetic ^)? block ( arithmetic ^ atom )? ;
	public final MacroParser.sequencia_return sequencia() throws RecognitionException {
		MacroParser.sequencia_return retval = new MacroParser.sequencia_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NUMBER14=null;
		ParserRuleReturnScope arithmetic15 =null;
		ParserRuleReturnScope block16 =null;
		ParserRuleReturnScope arithmetic17 =null;
		ParserRuleReturnScope atom18 =null;

		Object NUMBER14_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:61:10: ( ( ( NUMBER ) arithmetic ^)? block ( arithmetic ^ atom )? )
			// ../csheets/ext/editMacro/compiler/Macro.g:62:9: ( ( NUMBER ) arithmetic ^)? block ( arithmetic ^ atom )?
			{
			root_0 = (Object)adaptor.nil();


			// ../csheets/ext/editMacro/compiler/Macro.g:62:9: ( ( NUMBER ) arithmetic ^)?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==NUMBER) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:62:10: ( NUMBER ) arithmetic ^
					{
					// ../csheets/ext/editMacro/compiler/Macro.g:62:10: ( NUMBER )
					// ../csheets/ext/editMacro/compiler/Macro.g:62:11: NUMBER
					{
					NUMBER14=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_sequencia212); 
					NUMBER14_tree = (Object)adaptor.create(NUMBER14);
					adaptor.addChild(root_0, NUMBER14_tree);

					}

					pushFollow(FOLLOW_arithmetic_in_sequencia215);
					arithmetic15=arithmetic();
					state._fsp--;

					root_0 = (Object)adaptor.becomeRoot(arithmetic15.getTree(), root_0);
					}
					break;

			}

			pushFollow(FOLLOW_block_in_sequencia220);
			block16=block();
			state._fsp--;

			adaptor.addChild(root_0, block16.getTree());

			// ../csheets/ext/editMacro/compiler/Macro.g:62:39: ( arithmetic ^ atom )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==DIV||(LA4_0 >= MINUS && LA4_0 <= MULTI)||(LA4_0 >= PERCENT && LA4_0 <= POWER)) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:62:40: arithmetic ^ atom
					{
					pushFollow(FOLLOW_arithmetic_in_sequencia223);
					arithmetic17=arithmetic();
					state._fsp--;

					root_0 = (Object)adaptor.becomeRoot(arithmetic17.getTree(), root_0);
					pushFollow(FOLLOW_atom_in_sequencia226);
					atom18=atom();
					state._fsp--;

					adaptor.addChild(root_0, atom18.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "sequencia"


	public static class arithmetic_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arithmetic"
	// ../csheets/ext/editMacro/compiler/Macro.g:65:1: arithmetic : ( PLUS | MINUS | MULTI | DIV | POWER | PERCENT );
	public final MacroParser.arithmetic_return arithmetic() throws RecognitionException {
		MacroParser.arithmetic_return retval = new MacroParser.arithmetic_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set19=null;

		Object set19_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:65:11: ( PLUS | MINUS | MULTI | DIV | POWER | PERCENT )
			// ../csheets/ext/editMacro/compiler/Macro.g:
			{
			root_0 = (Object)adaptor.nil();


			set19=input.LT(1);
			if ( input.LA(1)==DIV||(input.LA(1) >= MINUS && input.LA(1) <= MULTI)||(input.LA(1) >= PERCENT && input.LA(1) <= POWER) ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set19));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}

			catch (RecognitionException e) {
				reportError(e);
				throw e; 
			}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arithmetic"


	public static class block_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "block"
	// ../csheets/ext/editMacro/compiler/Macro.g:69:1: block : LBRA ! ( attribution | comparison | block ) ( SEMI ^ ( attribution | comparison | block ) )* RBRA !;
	public final MacroParser.block_return block() throws RecognitionException {
		MacroParser.block_return retval = new MacroParser.block_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LBRA20=null;
		Token SEMI24=null;
		Token RBRA28=null;
		ParserRuleReturnScope attribution21 =null;
		ParserRuleReturnScope comparison22 =null;
		ParserRuleReturnScope block23 =null;
		ParserRuleReturnScope attribution25 =null;
		ParserRuleReturnScope comparison26 =null;
		ParserRuleReturnScope block27 =null;

		Object LBRA20_tree=null;
		Object SEMI24_tree=null;
		Object RBRA28_tree=null;

		try {
			// ../csheets/ext/editMacro/compiler/Macro.g:69:6: ( LBRA ! ( attribution | comparison | block ) ( SEMI ^ ( attribution | comparison | block ) )* RBRA !)
			// ../csheets/ext/editMacro/compiler/Macro.g:70:9: LBRA ! ( attribution | comparison | block ) ( SEMI ^ ( attribution | comparison | block ) )* RBRA !
			{
			root_0 = (Object)adaptor.nil();


			LBRA20=(Token)match(input,LBRA,FOLLOW_LBRA_in_block286); 
			// ../csheets/ext/editMacro/compiler/Macro.g:70:15: ( attribution | comparison | block )
			int alt5=3;
			switch ( input.LA(1) ) {
			case CELL_REF:
				{
				int LA5_1 = input.LA(2);
				if ( (LA5_1==ATT) ) {
					alt5=1;
				}
				else if ( (LA5_1==AMP||LA5_1==COLON||(LA5_1 >= DIV && LA5_1 <= EQ)||(LA5_1 >= GT && LA5_1 <= GTEQ)||(LA5_1 >= LT && LA5_1 <= NEQ)||(LA5_1 >= PERCENT && LA5_1 <= POWER)||LA5_1==RBRA||LA5_1==SEMI) ) {
					alt5=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FUNCTION:
			case LPAR:
			case MINUS:
			case NUMBER:
			case STRING:
				{
				alt5=2;
				}
				break;
			case TEMPVAR:
				{
				int LA5_3 = input.LA(2);
				if ( (LA5_3==ATT) ) {
					alt5=1;
				}
				else if ( (LA5_3==AMP||(LA5_3 >= DIV && LA5_3 <= EQ)||(LA5_3 >= GT && LA5_3 <= GTEQ)||(LA5_3 >= LT && LA5_3 <= NEQ)||(LA5_3 >= PERCENT && LA5_3 <= POWER)||LA5_3==RBRA||LA5_3==SEMI) ) {
					alt5=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LBRA:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:70:16: attribution
					{
					pushFollow(FOLLOW_attribution_in_block290);
					attribution21=attribution();
					state._fsp--;

					adaptor.addChild(root_0, attribution21.getTree());

					}
					break;
				case 2 :
					// ../csheets/ext/editMacro/compiler/Macro.g:70:30: comparison
					{
					pushFollow(FOLLOW_comparison_in_block294);
					comparison22=comparison();
					state._fsp--;

					adaptor.addChild(root_0, comparison22.getTree());

					}
					break;
				case 3 :
					// ../csheets/ext/editMacro/compiler/Macro.g:70:43: block
					{
					pushFollow(FOLLOW_block_in_block298);
					block23=block();
					state._fsp--;

					adaptor.addChild(root_0, block23.getTree());

					}
					break;

			}

			// ../csheets/ext/editMacro/compiler/Macro.g:70:50: ( SEMI ^ ( attribution | comparison | block ) )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==SEMI) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// ../csheets/ext/editMacro/compiler/Macro.g:70:51: SEMI ^ ( attribution | comparison | block )
					{
					SEMI24=(Token)match(input,SEMI,FOLLOW_SEMI_in_block302); 
					SEMI24_tree = (Object)adaptor.create(SEMI24);
					root_0 = (Object)adaptor.becomeRoot(SEMI24_tree, root_0);

					// ../csheets/ext/editMacro/compiler/Macro.g:70:57: ( attribution | comparison | block )
					int alt6=3;
					switch ( input.LA(1) ) {
					case CELL_REF:
						{
						int LA6_1 = input.LA(2);
						if ( (LA6_1==ATT) ) {
							alt6=1;
						}
						else if ( (LA6_1==AMP||LA6_1==COLON||(LA6_1 >= DIV && LA6_1 <= EQ)||(LA6_1 >= GT && LA6_1 <= GTEQ)||(LA6_1 >= LT && LA6_1 <= NEQ)||(LA6_1 >= PERCENT && LA6_1 <= POWER)||LA6_1==RBRA||LA6_1==SEMI) ) {
							alt6=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 6, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
